--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DB_USER=postgres
 DB_PASS=postgres
 
 # 🐇 RabbitMQ (para Celery y app desktop)
-RABBITMQ_URL=amqp://guest:guest@localhost:5672//
+RABBITMQ_URL=amqp://guest:guest@localhost:5672/
 
 # 📂 Rutas base (opcional si compartes volumen con worker)
 AUDIO_DIR=/mnt/storage/audios
@@ -14,7 +14,15 @@ TRANSCRIPCIONES_DIR=/mnt/storage/transcripciones
 VIDEOS_DIR=storage/videos
 VIDEOS_WEBM_DIR=storage/videos_webm
 
-RESULT_BACKEND=rpc://
+RESULT_BACKEND=db+postgresql://postgres:postgres@db:5432/forense_db
 
-QUEUE_TASK=tasks.transcribir
-QUEUE_NAME=transcripciones
+QUEUE_TASK_TRANSCRIPCION=tasks.transcribir
+QUEUE_TASK_VIDEO=tasks.convertir_video
+QUEUE_NAME_TRANSCRIPCIONES=transcripciones
+QUEUE_NAME_CONVERSIONES=conversiones_video
+
+#MacBook-Pro-de-Adan-2045.local
+
+LDAP_SERVER_IP=192.168.1.158
+LDAP_PORT=389
+LDAP_DOMAIN=semefo.local
