--- a/.env.local
+++ b/.env.local
@@ -7,3 +7,7 @@ DB_PASS="Claudia01$!"
 
 # RabbitMQ en Mac
 RABBITMQ_URL=amqp://guest:guest@localhost:5672//
+
+LDAP_SERVER_IP=192.168.1.158
+LDAP_PORT=389
+LDAP_DOMAIN=semefo.local
