--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - rabbitmq
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/forense_db
-      - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
+      - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672
 
   db:
     image: postgres:15
@@ -40,6 +40,7 @@ services:
       RABBITMQ_DEFAULT_PASS: guest
     volumes:
       - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
+    restart: always  
 
   celery:
     build: ./worker
@@ -49,9 +50,11 @@ services:
     depends_on:
       - rabbitmq
       - fastapi
+      - db
     environment:
       - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/forense_db
+    restart: always  
 
 volumes:
   postgres_data:
