--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,14 @@
 version: '3.8'
 
 services:
-  fastapi:
-    build: ./api-server
-    container_name: fastapi_app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
-    volumes:
-      - ./api-server:/code
-    ports:
-      - "8000:8000"
-    depends_on:
-      - db
-      - rabbitmq
-    environment:
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/forense_db
-      - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672
-
   db:
     image: postgres:15
     container_name: postgres_db
     restart: always
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: forense_db
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -38,23 +23,47 @@ services:
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
-    volumes:
-      - ./rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
     restart: always  
+
+  fastapi:
+    build: ./api-server
+    container_name: fastapi_app
+    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    volumes:
+      - ./api-server:/code
+    working_dir: /code
+    ports:
+      - "8000:8000"
+    depends_on:
+      - db
+      - rabbitmq
+    environment:
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - RABBITMQ_URL=${RABBITMQ_URL}
 
   celery:
     build: ./worker
     container_name: celery_worker
     volumes:
       - ./worker:/code
+    working_dir: /code
     depends_on:
       - rabbitmq
       - fastapi
       - db
     environment:
-      - CELERY_BROKER_URL=amqp://guest:guest@rabbitmq:5672//
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/forense_db
-    restart: always  
+      - DB_HOST=${DB_HOST}
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - RABBITMQ_URL=${RABBITMQ_URL}
+    command: celery -A celery_app worker --loglevel=info
+    restart: always
 
 volumes:
   postgres_data:
