--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -1,6 +1,5 @@
-celery
-faster-whisper
-ffmpeg-python
-python-dotenv
-pika
-torch --index-url https://download.pytorch.org/whl/cu118
+celery==5.3.6
+sqlalchemy==2.0.19
+psycopg2-binary==2.9.9
+ffmpeg-python==0.2.0
+python-dotenv==1.0.1
