--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,19 +1,23 @@
+# Dockerfile para celery (en ./worker/Dockerfile)
 FROM python:3.11-slim
 
-# Crear usuario
-RUN adduser --disabled-password --gecos '' celeryuser
+WORKDIR /app
 
-WORKDIR /code
+# Instalar dependencias del sistema
+RUN apt-get update && apt-get install -y \
+    ffmpeg \
+    && rm -rf /var/lib/apt/lists/*
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copiar requirements del worker e instalar dependencias Python
+COPY worker/requirements.txt ./worker/
+RUN pip install --no-cache-dir -r worker/requirements.txt
 
+# Copiar todo el proyecto
 COPY . .
 
-# Cambiar propietario
-RUN chown -R celeryuser:celeryuser /code
+# Configurar variables de entorno
+ENV PYTHONPATH=/app
+ENV PYTHONUNBUFFERED=1
 
-# Cambiar a ese usuario
-USER celeryuser
-
-CMD ["celery", "-A", "celery_app", "worker", "--loglevel=info"]
+# Comando por defecto
+CMD ["celery", "-A", "worker.celery_app", "worker", "--loglevel=info"]
