--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,23 +1,24 @@
-# Dockerfile para celery (en ./worker/Dockerfile)
+# Dockerfile para celery worker
 FROM python:3.11-slim
 
-WORKDIR /app
+# Crear el directorio de trabajo del worker
+WORKDIR /app/worker
 
-# Instalar dependencias del sistema
+# Instalar dependencias del sistema (FFmpeg)
 RUN apt-get update && apt-get install -y \
     ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
-# Copiar requirements del worker e instalar dependencias Python
-COPY worker/requirements.txt ./worker/
-RUN pip install --no-cache-dir -r worker/requirements.txt
+# Copiar requirements específicos del worker e instalar dependencias Python
+COPY worker/requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar todo el proyecto
-COPY . .
+# Copiar solo el código del worker
+COPY worker/ ./
 
 # Configurar variables de entorno
-ENV PYTHONPATH=/app
+ENV PYTHONPATH=/app/worker
 ENV PYTHONUNBUFFERED=1
 
-# Comando por defecto
-CMD ["celery", "-A", "worker.celery_app", "worker", "--loglevel=info"]
+# Comando por defecto para arrancar celery
+CMD ["celery", "-A", "celery_app", "worker", "--loglevel=info"]
