--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15
     container_name: postgres_db
     restart: always
+    env_file:
+      - .env
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASS}
@@ -18,6 +18,8 @@ services:
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
+    env_file:
+      - .env
     ports:
       - "5672:5672"
       - "15672:15672"
@@ -34,18 +36,14 @@ services:
     volumes:
       - ./api-server:/code
     working_dir: /code
+    env_file:
+      - .env
     ports:
       - "8000:8000"
     depends_on:
       - db
       - rabbitmq
     environment:
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASS=${DB_PASS}
-      - RABBITMQ_URL=${RABBITMQ_URL}
       - TZ=America/Monterrey
 
   celery:
@@ -61,13 +59,9 @@ services:
       - rabbitmq
       - fastapi
       - db
+    env_file:
+      - .env
     environment:
-      - DB_HOST=${DB_HOST}
-      - DB_PORT=${DB_PORT}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASS=${DB_PASS}
-      - RABBITMQ_URL=${RABBITMQ_URL}
       - TZ=America/Monterrey
       - PYTHONPATH=/app
     command: celery -A worker.celery_app worker --loglevel=info
