--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.DS_Store
 
 # IDEs y editores
 .vscode/
@@ -64,3 +65,4 @@ __pycache__/
 # Storage
 storage/
 storage_test/
+.DS_Store
