--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,24 +1,22 @@
 # Dockerfile para celery worker
 FROM python:3.11-slim
 
-# Crear el directorio de trabajo del worker
 WORKDIR /app/worker
 
-# Instalar dependencias del sistema (FFmpeg)
+# Instalar dependencias del sistema
 RUN apt-get update && apt-get install -y \
     ffmpeg \
     && rm -rf /var/lib/apt/lists/*
 
-# Copiar requirements específicos del worker e instalar dependencias Python
-COPY worker/requirements.txt ./
-RUN pip install --no-cache-dir -r requirements.txt
+# Copiar e instalar dependencias Python
+COPY worker/requirements.txt /app/worker/requirements.txt
+RUN pip install --no-cache-dir -r /app/worker/requirements.txt
 
-# Copiar solo el código del worker
-COPY worker/ ./
+# Copiar el código fuente del worker
+COPY worker/ /app/worker/
 
-# Configurar variables de entorno
-ENV PYTHONPATH=/app/worker
+# Configurar entorno
 ENV PYTHONUNBUFFERED=1
+ENV PYTHONPATH=/app/worker
 
-# Comando por defecto para arrancar celery
 CMD ["celery", "-A", "celery_app", "worker", "--loglevel=info"]
