--- a/api-server/requirements.txt
+++ b/api-server/requirements.txt
@@ -1,6 +1,9 @@
-fastapi
-uvicorn[standard]
-psycopg2-binary
-sqlalchemy
-pydantic
-python-dotenv
+fastapi==0.110.0
+uvicorn[standard]==0.29.0
+sqlalchemy==2.0.29
+psycopg2-binary==2.9.9
+pydantic==2.6.4
+python-dotenv==1.0.1
+requests==2.31.0
+celery==5.3.6
+pika==1.3.2
