--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:15
@@ -18,24 +20,30 @@ services:
   rabbitmq:
     image: rabbitmq:3-management
     container_name: rabbitmq
+    restart: always
     env_file:
       - .env
-    ports:
-      - "5672:5672"
-      - "15672:15672"
     environment:
       RABBITMQ_DEFAULT_USER: guest
       RABBITMQ_DEFAULT_PASS: guest
       TZ: America/Monterrey
-    restart: always
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   fastapi:
     build: ./api-server
     container_name: fastapi_app
     command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    working_dir: /code/api-server
     volumes:
-      - ./api-server:/code
-    working_dir: /code
+      - .:/code
+      - ./storage:/storage
     env_file:
       - .env
     ports:
@@ -45,6 +53,8 @@ services:
       - rabbitmq
     environment:
       - TZ=America/Monterrey
+      - PYTHONPATH=/code
+      - DB_HOST=postgres_db
 
   celery:
     build:
@@ -52,20 +62,28 @@ services:
       dockerfile: worker/Dockerfile
     container_name: celery_worker
     working_dir: /app/worker
+    command: celery -A worker.celery_app worker -Q uniones_audio,uniones_video,conversiones_video --loglevel=info
     volumes:
       - .:/app
       - ./storage:/storage
-    depends_on:
-      - rabbitmq
-      - fastapi
-      - db
     env_file:
       - .env
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      db:
+        condition: service_started
     environment:
       - TZ=America/Monterrey
       - PYTHONPATH=/app
-    command: celery -A worker.celery_app worker --loglevel=info
+      - DB_HOST=postgres_db
     restart: always
+    user: "1000:1000"
+    healthcheck:
+      test: ["CMD-SHELL", "celery -A worker.celery_app status || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
 volumes:
   postgres_data:
