--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: '3.8'
 
 services:
@@ -32,10 +31,11 @@ services:
       - "5672:5672"
       - "15672:15672"
     healthcheck:
-      test: ["CMD", "rabbitmqctl", "status"]
+      test: ["CMD-SHELL", "rabbitmq-diagnostics -q ping || exit 1"]
       interval: 10s
       timeout: 5s
-      retries: 5
+      retries: 10
+      start_period: 30s
 
   fastapi:
     build: ./api-server
@@ -50,8 +50,10 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - db
-      - rabbitmq
+      db:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
     environment:
       - TZ=America/Monterrey
       - PYTHONPATH=/code
@@ -69,16 +71,16 @@ services:
       - ./storage:/storage
     env_file:
       - .env
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
-      db:
-        condition: service_started
     environment:
       - TZ=America/Monterrey
       - PYTHONPATH=/app
       - DB_HOST=postgres_db
     restart: always
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      db:
+        condition: service_started
     user: "1000:1000"
     healthcheck:
       test: ["CMD-SHELL", "ps aux | grep '[c]elery worker' || exit 1"]
@@ -108,6 +110,7 @@ services:
         condition: service_healthy
       db:
         condition: service_started
+    user: "1000:1000"
     healthcheck:
       test: ["CMD-SHELL", "ps aux | grep '[c]elery worker' || exit 1"]
       interval: 30s
