--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,10 +83,12 @@ services:
         condition: service_started
     user: "1000:1000"
     healthcheck:
-      test: ["CMD-SHELL", "ps aux | grep '[c]elery worker' || exit 1"]
+      test:
+        ["CMD-SHELL", "celery -A worker.celery_app status | grep OK || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 3
+      start_period: 20s
 
   celery_video2:
     build:
@@ -112,10 +114,12 @@ services:
         condition: service_started
     user: "1000:1000"
     healthcheck:
-      test: ["CMD-SHELL", "ps aux | grep '[c]elery worker' || exit 1"]
+      test:
+        ["CMD-SHELL", "celery -A worker.celery_app status | grep OK || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 5
+      retries: 3
+      start_period: 20s
 
 volumes:
   postgres_data:
