--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,6 +120,36 @@ services:
       timeout: 10s
       retries: 3
       start_period: 20s
+  celery_manifest:
+    build:
+      context: .
+      dockerfile: worker/Dockerfile
+    container_name: celery_manifest
+    working_dir: /app/worker
+    command: celery -A worker.celery_app worker -Q manifest --loglevel=info --hostname=worker_manifest@%h
+    volumes:
+      - .:/app
+      - ./storage:/storage
+    env_file:
+      - .env
+    environment:
+      - TZ=America/Monterrey
+      - PYTHONPATH=/app
+      - DB_HOST=postgres_db
+    restart: always
+    depends_on:
+      rabbitmq:
+        condition: service_healthy
+      db:
+        condition: service_started
+    user: "1000:1000"
+    healthcheck:
+      test:
+        ["CMD-SHELL", "celery -A worker.celery_app status | grep OK || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 20s
 
 volumes:
   postgres_data:
