--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,12 +1,28 @@
-version: '3.8'
-
 services:
   celery:
     environment:
       - MODO_PRUEBA_VIDEO=1
       - IS_DOCKER=1
+      - STORAGE_ROOT=/storage
+
+  celery_worker:
+    environment:
+      - MODO_PRUEBA_VIDEO=1
+      - IS_DOCKER=1
+      - STORAGE_ROOT=/storage
 
   celery_video2:
     environment:
       - MODO_PRUEBA_VIDEO=1
       - IS_DOCKER=1
+      - STORAGE_ROOT=/storage
+
+  celery_manifest:
+    environment:
+      - MODO_PRUEBA_VIDEO=1
+      - IS_DOCKER=1
+      - STORAGE_ROOT=/storage
+
+  fastapi:
+    environment:
+      - STORAGE_ROOT=/storage
