--- a/api-server/Dockerfile
+++ b/api-server/Dockerfile
@@ -5,4 +5,7 @@ WORKDIR /code
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+# Copiar solo API y Worker
+COPY api_server /code/api_server
+COPY worker /code/worker
+COPY .env /code/.env
