fix afst dockerfile

--- a/api-server/Dockerfile
+++ b/api-server/Dockerfile
@@ -6,6 +6,6 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copiar solo API y Worker
-COPY api_server /code/api_server
+COPY api-server /code/api-server
 COPY worker /code/worker
 COPY .env /code/.env
