--- a/api-server/Dockerfile
+++ b/api-server/Dockerfile
@@ -2,9 +2,8 @@ FROM python:3.11-slim
 
 WORKDIR /code
 
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Copiar solo API y Worker
 COPY api-server /code/api-server
 COPY worker /code/worker
+
+COPY api-server/requirements.txt /code/requirements.txt
+RUN pip install --no-cache-dir -r /code/requirements.txt
