--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,8 +50,8 @@ services:
   # ============================================================
   fastapi:
     build:
-      context: ./api-server
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./api-server/Dockerfile
     container_name: fastapi_app
     command: uvicorn main:app --host 0.0.0.0 --port 8000
     working_dir: /code/api-server
