--- a/api-server/Dockerfile
+++ b/api-server/Dockerfile
@@ -2,8 +2,7 @@ FROM python:3.11-slim
 
 WORKDIR /code
 
-COPY api-server /code/api-server
-COPY worker /code/worker
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY api-server/requirements.txt /code/requirements.txt
-RUN pip install --no-cache-dir -r /code/requirements.txt
+COPY . .
