--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
   fastapi:
     build:
       context: .
-      dockerfile: ./api-server/Dockerfile
+      dockerfile: api-server/Dockerfile
     container_name: fastapi_app
     command: uvicorn main:app --host 0.0.0.0 --port 8000
     working_dir: /code/api-server
