--- a/api-server/Dockerfile
+++ b/api-server/Dockerfile
@@ -2,8 +2,19 @@ FROM python:3.11-slim
 
 WORKDIR /code
 
+# ------------------------------
+# Instalar dependencias
+# ------------------------------
 COPY api-server/requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir -r /code/requirements.txt
 
-COPY api-server /code/api-server
+# ------------------------------
+# Copiar código
+# ------------------------------
+COPY api-server /code/api_server
 COPY worker /code/worker
+
+# ------------------------------
+# PYTHONPATH explícito
+# ------------------------------
+ENV PYTHONPATH=/code
