--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,22 +1,22 @@
-# Dockerfile para celery worker
 FROM python:3.11-slim
 
-WORKDIR /app/worker
+WORKDIR /app
 
-# Instalar dependencias del sistema
+# 🔧 Dependencias necesarias para psutil (y futuras libs nativas)
 RUN apt-get update && apt-get install -y \
-    ffmpeg \
+    gcc \
+    python3-dev \
+    build-essential \
+    procps \
     && rm -rf /var/lib/apt/lists/*
 
-# Copiar e instalar dependencias Python
+# Copiar requirements
 COPY worker/requirements.txt /app/worker/requirements.txt
+
+# Instalar dependencias Python
 RUN pip install --no-cache-dir -r /app/worker/requirements.txt
 
-# Copiar el código fuente del worker
-COPY worker/ /app/worker/
+# Copiar código del worker
+COPY worker /app/worker
 
-# Configurar entorno
-ENV PYTHONUNBUFFERED=1
-ENV PYTHONPATH=/app/worker
-
-CMD ["celery", "-A", "celery_app", "worker", "--loglevel=info"]
+CMD ["celery", "-A", "worker.tasks", "worker"]
