--- a/api_server/requirements.txt
+++ b/api_server/requirements.txt
@@ -1,15 +1,21 @@
 fastapi==0.110.0
-uvicorn[standard]==0.29.0
-sqlalchemy==2.0.29
+uvicorn[standard]==0.27.1
+
+sqlalchemy==2.0.31
 psycopg2-binary==2.9.9
 pydantic==2.6.4
+
 python-dotenv==1.0.1
 requests==2.31.0
+psutil==5.9.8
+
 celery==5.3.6
 pika==1.3.2
+
 ldap3==2.9.1
 ntlm-auth==1.5.0
 pyspnego==0.10.2
-python-jose[cryptography]
-passlib[bcrypt]
-bcrypt
+
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
