--- a/api_server/Dockerfile
+++ b/api_server/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
     python3-dev \
     build-essential \
     procps \
+    && apt-get install -y --no-install-recommends iputils-ping \
     && rm -rf /var/lib/apt/lists/*
 
 # --------------------------------------------------
