--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,8 @@ services:
     container_name: fastapi_app
     command: uvicorn api_server.main:app --host 0.0.0.0 --port 8000
     working_dir: /code
+    cap_add:
+      - NET_RAW
     volumes:
       - ./worker:/code/worker
       - ./logs:/code/logs
